style nesting fixed

--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
 
   <body class="background">
     <header class="header">
-      <img src="logo.png" alt="logo" />
+      <img src="logo.png" alt="logo" class="logo"/>
       <button type="button" class="today-button" date="12th May">
         <a href="day.html">Today</a>
       </button>
