--- a/month.html
+++ b/month.html
@@ -14,7 +14,7 @@
 
   <body class="background">
     <header class="header">
-      <img src="logo.png" alt="logo" />
+      <img src="logo.png" alt="logo" class="logo"/>
       <button type="button" class="today-button" date="12th May">
         <a href="day.html">Today</a>
       </button>
@@ -32,7 +32,7 @@
         <div class="small-calendar">
         <div class="center">
             <button type="button" class="left-right-button">&lt</button>
-        <a href="month.html">May 2022</a>
+        <a class="link" href="month.html">May 2022</a>
         <button type="button" class="left-right-button">&gt</button>
         </div>
         <div class="weekdays">
@@ -60,24 +60,48 @@
             <div class="weekdays">
                 <p>Mo</p><p>Tu</p><p>We</p><p>Th</p><p>Fr</p><p>Sa</p><p>Su</p>
             </div>
-            <table>
+            <table class="calendar">
                 <tr>
                     <td><div></div></td><td><div></div></td><td><div></div></td><td><div></div></td><td><div></div></td><td><div></div></td><td><div>1</div></td>
                 </tr>
                 <tr>
-                    <td><div>2</div></td><td><div>3</div></td><td><div>4</div></td><td><div>5</div></td><td><div>6</div></td><td><div>7</div></td><td><div>8</div></td>
+                    <td><div>2</div></td><td><div>3
+                      <div class="calendar-event">
+                        <p class="title">Zoom-meeting</p>
+                        <p class="time">10:00</p>
+                      </div>
+                    </div></td><td><div>4</div></td><td><div>5</div></td><td><div>6</div></td><td><div>7</div></td><td><div>8</div></td>
                 </tr>
                 <tr>
                     <td><div>9</div></td><td><div>10</div></td><td><div>11</div></td><td><div>12</div></td><td><div>13</div></td><td><div>14</div></td><td><div>15</div></td>
                 </tr>
                 <tr>
-                    <td><div>16</div></td><td><div>17</div></td><td><div>18</div></td><td><div>19</div></td><td><div>20</div></td><td><div>21</div></td><td><div>22</div></td>
+                    <td><div>16</div></td><td><div>17</div></td><td><div>18</div></td>
+                    <td><div><p class="active">19</p>
+                      <div class="calendar-event">
+                        <p class="title">Zoom-meeting</p>
+                        <p class="time">10:00</p>
+                      </div>
+                      <div class="calendar-event">
+                        <p class="title">Picasso exibition opening</p>
+                        <p class="time">12:00</p>
+                      </div>
+                      <div class="calendar-event">
+                        <p class="title">Ellie B-Day</p>
+                        <p class="time">17:00</p>
+                      </div>
+                    </div></td><td><div>20</div></td><td><div>21</div></td><td><div>22</div></td>
                 </tr>
                 <tr>
                     <td><div>23</div></td><td><div>24</div></td><td><div>25</div></td><td><div>26</div></td><td><div>27</div></td><td><div>28</div></td><td><div>29</div></td>
                 </tr>
                 <tr>
-                    <td><div>30</div></td><td><div>31</div></td><td><div></div></td><td><div></div></td><td><div></div></td><td><div></div></td><td><div></div></td>
+                    <td><div>30</div></td><td><div>31
+                      <div class="calendar-event">
+                        <p class="title">Romeo and Juliet</p>
+                        <p class="time">17:00</p>
+                      </div>
+                    </div></td><td><div></div></td><td><div></div></td><td><div></div></td><td><div></div></td><td><div></div></td>
                 </tr>
                 </table>
         </div>
