--- a/user-page.html
+++ b/user-page.html
@@ -11,7 +11,7 @@
 
   <body class="background">
     <header class="header">
-      <img src="logo.png" alt="logo"/>
+      <img src="logo.png" alt="logo" class="logo"/>
       <button type="button" class="today-button" date="19th May"><a href="day.html">Today</a></button>
       <div class="center">
         <a href="month.html">May 2022</a>
