--- a/month.html
+++ b/month.html
@@ -61,10 +61,10 @@
                 <p>Mo</p><p>Tu</p><p>We</p><p>Th</p><p>Fr</p><p>Sa</p><p>Su</p>
             </div>
             <table class="calendar">
-                <tr>
+                <tr class="calendar-row">
                     <td><div></div></td><td><div></div></td><td><div></div></td><td><div></div></td><td><div></div></td><td><div></div></td><td><div>1</div></td>
                 </tr>
-                <tr>
+                <tr  class="calendar-row">
                     <td><div>2</div></td><td><div>3
                       <div class="calendar-event">
                         <p class="title">Zoom-meeting</p>
@@ -72,10 +72,10 @@
                       </div>
                     </div></td><td><div>4</div></td><td><div>5</div></td><td><div>6</div></td><td><div>7</div></td><td><div>8</div></td>
                 </tr>
-                <tr>
+                <tr class="calendar-row">
                     <td><div>9</div></td><td><div>10</div></td><td><div>11</div></td><td><div>12</div></td><td><div>13</div></td><td><div>14</div></td><td><div>15</div></td>
                 </tr>
-                <tr>
+                <tr class="calendar-row">
                     <td><div>16</div></td><td><div>17</div></td><td><div>18</div></td>
                     <td><div><p class="active">19</p>
                       <div class="calendar-event">
@@ -92,10 +92,10 @@
                       </div>
                     </div></td><td><div>20</div></td><td><div>21</div></td><td><div>22</div></td>
                 </tr>
-                <tr>
+                <tr class="calendar-row">
                     <td><div>23</div></td><td><div>24</div></td><td><div>25</div></td><td><div>26</div></td><td><div>27</div></td><td><div>28</div></td><td><div>29</div></td>
                 </tr>
-                <tr>
+                <tr class="calendar-row">
                     <td><div>30</div></td><td><div>31
                       <div class="calendar-event">
                         <p class="title">Romeo and Juliet</p>
